<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/cadastre_seus_dados"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nome: "
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/edit_nome"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Idade: "
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/edit_idade"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:backgroundTint="@color/white"
            android:inputType="numberSigned"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Temperatura corpotal: "
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/edit_temperatura"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:backgroundTint="@color/white"
            android:inputType="number"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Período com tosse (em dias): "
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/edit_tosse"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:backgroundTint="@color/white"
            android:inputType="numberSigned"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Período com dor de cabeça (em dias): "
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/edit_dor_cabeca"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:backgroundTint="@color/white"
            android:inputType="numberSigned"
            android:textColor="@color/white" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/visitou_os_seguintes_pa_ses"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/edit_italia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:text="@string/italia"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/edit_diasIt"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:backgroundTint="@color/white"
            android:inputType="numberSigned"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/edit_china"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:text="@string/china"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/edit_diasChi"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:backgroundTint="@color/white"
            android:inputType="numberSigned"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/edit_indonesia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:text="@string/indonesia"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/edit_diasInd"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/white"
            android:inputType="numberSigned"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/edit_portugal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:text="@string/portugal"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/edit_diasPt"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:backgroundTint="@color/white"
            android:inputType="numberSigned"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/edit_eua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:text="@string/eua"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/edit_diasEua"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:backgroundTint="@color/white"
            android:inputType="numberSigned"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_enviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/enviar" />

</LinearLayout>